compiler/internal/frontend/testdata/parser/negative/generics.tetra
struct Box<T, T>:
    value: T
